--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-# gitignore created on 11/19/25 at 11:46
+# gitignore created on 01/21/26 at 17:09
 # Disable reminder in prompt
 ignoredirmessage
+
+# ignore .build_failed files
+**/.build_failed*
 
 # OS generated files
 ### Linux ###
@@ -83,7 +86,6 @@ $RECYCLE.BIN/
 # ignore .build_failed files
 **/.build_failed*
 
-
 # ignore .bak files
 **/*.bak
 
@@ -112,15 +114,10 @@ default.env
 # Ignore the file: compose.default.yaml
 compose.default.yaml
 
-# Ignore compose.yml
+# Exclude compose.yaml just in case it has sensitive data
 compose.yml
 compose.yaml
-
-# Ignore ./rootfs
-rootfs/**
 
 # Exclude the rootfs dir
 rootfs
 
-# Exclude compose.yaml just in case it has sensitive data
-compose.yaml
